parent 1db341b30fdd97ad7fc9a21109ae90ef7472b6c5 author f0m41h4u7 <fomalhaut_a3v@outlook.com> 1601649800 +0300 committer f0m41h4u7 <fomalhaut_a3v@outlook.com> 1602622337 +0300
parent 1db341b30fdd97ad7fc9a21109ae90ef7472b6c5
author f0m41h4u7 <fomalhaut_a3v@outlook.com> 1601649800 +0300
committer f0m41h4u7 <fomalhaut_a3v@outlook.com> 1602622256 +0300

parent 1db341b30fdd97ad7fc9a21109ae90ef7472b6c5
author f0m41h4u7 <fomalhaut_a3v@outlook.com> 1601649800 +0300
committer f0m41h4u7 <fomalhaut_a3v@outlook.com> 1602622242 +0300

fix conflicts

set up ci/cd

fix travis

fix travis

fix travis

improve travis.yml

finish hw 0.2

fix .travis.yml

change include

fix version

try to use c++17

Update .travis.yml

Update .travis.yml

Update .travis.yml

Update .travis.yml

Update .travis.yml

Update .travis.yml

fix version

improve travis.yml

Update .travis.yml

Update CMakeLists.txt

Update CMakeLists.txt

restore files

save duplicate addresses

fix filtering

set up ci/cd

finish hw 0.2

fix .travis.yml

change include

try to use c++17

Update .travis.yml

Update .travis.yml

Update .travis.yml

fix version

Update .travis.yml

Update CMakeLists.txt

--- a/ip_filter/CMakeLists.txt
+++ b/ip_filter/CMakeLists.txt
@@ -1,50 +1,36 @@
 cmake_minimum_required(VERSION 3.2)
 
-project(helloworld VERSION 0.0.$ENV{TRAVIS_BUILD_NUMBER})
+project(ip_filter VERSION 0.0.$ENV{TRAVIS_BUILD_NUMBER})
 
 find_package(Boost COMPONENTS unit_test_framework REQUIRED)
 
-configure_file(version.h.in version.h)
+add_executable(ip_filter main.cpp)
+add_executable(test test.cpp)
 
-add_executable(helloworld_cli main.cpp)
-add_library(helloworld lib.cpp)
-add_executable(test test_version.cpp)
-
-set_target_properties(helloworld_cli helloworld test PROPERTIES
+set_target_properties(ip_filter test PROPERTIES
     CXX_STANDARD 17
     CXX_STANDARD_REQUIRED ON
 )
-target_include_directories(helloworld
+target_include_directories(ip_filter
     PRIVATE "${CMAKE_BINARY_DIR}"
 )
 set_target_properties(test PROPERTIES
     COMPILE_DEFINITIONS BOOST_TEST_DYN_LINK
     INCLUDE_DIRECTORIES ${Boost_INCLUDE_DIR}
 )
-
-target_link_libraries(helloworld_cli PRIVATE
-    helloworld
-)
 target_link_libraries(test
     ${Boost_LIBRARIES}
-    helloworld
 )
 
 if (MSVC)
-    target_compile_options(helloworld_cli PRIVATE
-        /W4
-    )
-    target_compile_options(helloworld PRIVATE
+    target_compile_options(ip_filter PRIVATE
         /W4
     )
     target_compile_options(test PRIVATE
         /W4
     )
 else ()
-    target_compile_options(helloworld_cli PRIVATE
-        -Wall -Wextra -pedantic -Werror
-    )
-    target_compile_options(helloworld PRIVATE
+    target_compile_options(ip_filter PRIVATE
         -Wall -Wextra -pedantic -Werror
     )
     target_compile_options(test PRIVATE
@@ -52,7 +38,7 @@ else ()
     )
 endif()
 
-install(TARGETS helloworld_cli RUNTIME DESTINATION bin)
+install(TARGETS ip_filter RUNTIME DESTINATION bin)
 
 set(CPACK_GENERATOR DEB)
 
