--- a/.travis.yml
+++ b/.travis.yml
@@ -1,23 +1,20 @@
 language: cpp
 
-env:
-  global:
-    - BRANCH="${TRAVIS_BRANCH}"
-
 before_script:
 - sudo apt-get install libboost-test-dev -y
 - echo "deb http://archive.ubuntu.com/ubuntu xenial main universe" | sudo tee -a /etc/apt/sources.list
 - sudo apt-get update -qq
 
 script:
-- cmake ${BRANCH}
-- cmake --build ${BRANCH}
-- cmake --build ${BRANCH} --target test
-- cmake --build $(BRANCH) --target package
+- if [ "$TRAVIS_BRANCH" == "master" ]; then travis_terminate 0; fi
+- cd $TRAVIS_BRANCH
+- cmake .
+- cmake --build .
+- cmake --build . --target test
+- cmake --build . --target package
 
 deploy:
   provider: script
   skip_cleanup: true
   script:
-  - curl -T ${BRANCH}-0.0.$TRAVIS_BUILD_NUMBER.deb -uf0m41h4u7:$BINTRAY_API_KEY "https://api.bintray.com/content/f0m41h4u7/cpp-hw/${BRANCH}/$TRAVIS_BUILD_NUMBER/${BRANCH}-0.0.$TRAVIS_BUILD_NUMBER.deb;deb_distribution=trusty;deb_component=main;deb_architecture=amd64;publish=1"
-  if: branch != master
+  - curl -T $TRAVIS_BRANCH-0.0.$TRAVIS_BUILD_NUMBER.deb -uf0m41h4u7:$BINTRAY_API_KEY "https://api.bintray.com/content/f0m41h4u7/cpp-hw/$TRAVIS_BRANCH/$TRAVIS_BUILD_NUMBER/$TRAVIS_BRANCH-0.0.$TRAVIS_BUILD_NUMBER.deb;deb_distribution=trusty;deb_component=main;deb_architecture=amd64;publish=1"
