--- a/.travis.yml
+++ b/.travis.yml
@@ -14,7 +14,10 @@ script:
 - cmake --build . --target package
 
 deploy:
-  provider: script
+  provider: bintray
+  file: $TRAVIS_BRANCH-0.0.$TRAVIS_BUILD_NUMBER.deb
+  user: f0m41h4u7
+  key: $BINTRAY_API_KEY
   skip_cleanup: true
-  script:
-  - curl -T $TRAVIS_BRANCH-0.0.$TRAVIS_BUILD_NUMBER.deb -uf0m41h4u7:$BINTRAY_API_KEY "https://api.bintray.com/content/f0m41h4u7/cpp-hw/$TRAVIS_BRANCH/$TRAVIS_BUILD_NUMBER/$TRAVIS_BRANCH-0.0.$TRAVIS_BUILD_NUMBER.deb;deb_distribution=trusty;deb_component=main;deb_architecture=amd64;publish=1"
+  on:
+    all_branches: true
