--- a/.travis.yml
+++ b/.travis.yml
@@ -38,11 +38,4 @@ jobs:
         - cmake .
         - cmake --build .
         - cmake --build . --target package
-      deploy:
-        provider: bintray
-        file: $TRAVIS_BRANCH-0.0.$TRAVIS_BUILD_NUMBER-Linux.deb
-        user: f0m41h4u7
-        key: $BINTRAY_API_KEY
-        skip_cleanup: true
-        on:
-          all_branches: true
+        - curl -T $TRAVIS_BRANCH-0.0.$TRAVIS_BUILD_NUMBER-Linux.deb -uf0m41h4u7:$BINTRAY_API_KEY "https://api.bintray.com/content/f0m41h4u7/cpp-hw/$TRAVIS_BRANCH/$TRAVIS_BUILD_NUMBER/$TRAVIS_BRANCH-0.0.$TRAVIS_BUILD_NUMBER-Linux.deb;deb_distribution=trusty;deb_component=main;deb_architecture=amd64;publish=1"
