--- a/helloworld/CMakeLists.txt
+++ b/helloworld/CMakeLists.txt
@@ -8,16 +8,16 @@ configure_file(version.h.in version.h)
 
 add_executable(helloworld_cli main.cpp)
 add_library(helloworld lib.cpp)
-add_executable(test_version test_version.cpp)
+add_executable(test test_version.cpp)
 
-set_target_properties(helloworld_cli helloworld test_version PROPERTIES
+set_target_properties(helloworld_cli helloworld test PROPERTIES
     CXX_STANDARD 17
     CXX_STANDARD_REQUIRED ON
 )
 target_include_directories(helloworld
     PRIVATE "${CMAKE_BINARY_DIR}"
 )
-set_target_properties(test_version PROPERTIES
+set_target_properties(test PROPERTIES
     COMPILE_DEFINITIONS BOOST_TEST_DYN_LINK
     INCLUDE_DIRECTORIES ${Boost_INCLUDE_DIR}
 )
@@ -25,7 +25,7 @@ set_target_properties(test_version PROPERTIES
 target_link_libraries(helloworld_cli PRIVATE
     helloworld
 )
-target_link_libraries(test_version
+target_link_libraries(test
     ${Boost_LIBRARIES}
     helloworld
 )
@@ -37,7 +37,7 @@ if (MSVC)
     target_compile_options(helloworld PRIVATE
         /W4
     )
-    target_compile_options(test_version PRIVATE
+    target_compile_options(test PRIVATE
         /W4
     )
 else ()
@@ -47,7 +47,7 @@ else ()
     target_compile_options(helloworld PRIVATE
         -Wall -Wextra -pedantic -Werror
     )
-    target_compile_options(test_version PRIVATE
+    target_compile_options(test PRIVATE
         -Wall -Wextra -pedantic -Werror
     )
 endif()
@@ -66,4 +66,4 @@ include(CPack)
 
 enable_testing()
 
-add_test(test_version test_version)
+add_test(test test)
