--- a/.travis.yml
+++ b/.travis.yml
@@ -19,6 +19,7 @@ jobs:
     - stage: "Deploy"
       name: "deploy"
       script:
+        - docker build -t cpp --build-arg PROJECT=$TRAVIS_BRANCH .
         - docker run -e TRAVIS_BUILD_NUMBER=$TRAVIS_BUILD_NUMBER -e TRAVIS_BRANCH=$TRAVIS_BRANCH -e BINTRAY_API_KEY=$BINTRAY_API_KEY cpp deb
       if: |
         (type = push)
