--- a/.travis.yml
+++ b/.travis.yml
@@ -13,13 +13,22 @@ jobs:
       name: "unit tests"
       script:
         - docker build -t cpp --build-arg PROJECT=$TRAVIS_BRANCH .
-        - docker run -e TRAVIS_BUILD_NUMBER=$TRAVIS_BUILD_NUMBER -e TRAVIS_BRANCH=$TRAVIS_BRANCH -e BINTRAY_API_KEY=$BINTRAY_API_KEY cpp test
+        - docker run -e TRAVIS_BUILD_NUMBER=$TRAVIS_BUILD_NUMBER cpp test
       if: |
         (type = push)
     - stage: "Deploy"
       name: "deploy"
       script:
         - docker build -t cpp --build-arg PROJECT=$TRAVIS_BRANCH .
-        - docker run -e TRAVIS_BUILD_NUMBER=$TRAVIS_BUILD_NUMBER -e TRAVIS_BRANCH=$TRAVIS_BRANCH -e BINTRAY_API_KEY=$BINTRAY_API_KEY cpp deb
+        - docker run -v $(pwd):/app -e TRAVIS_BUILD_NUMBER=$TRAVIS_BUILD_NUMBER cpp deb
+        - curl -T $TRAVIS_BRANCH-0.0.$TRAVIS_BUILD_NUMBER-Linux.deb -uf0m41h4u7:$BINTRAY_API_KEY "https://api.bintray.com/content/f0m41h4u7/cpp-hw/$TRAVIS_BRANCH/$TRAVIS_BUILD_NUMBER/$TRAVIS_BRANCH-0.0.$TRAVIS_BUILD_NUMBER-Linux.deb;deb_distribution=trusty;deb_component=main;deb_architecture=amd64;publish=1"
+      deploy:
+        provider: pages
+        skip_cleanup: true
+        github_token: $GITHUB_TOKEN
+        keep_history: false
+        local_dir: html
+        on:
+          branch: print_ip
       if: |
         (type = push)
