--- a/bulk/CMakeLists.txt
+++ b/bulk/CMakeLists.txt
@@ -1,41 +1,43 @@
 cmake_minimum_required(VERSION 3.2)
 
-project(matrix VERSION 0.0.$ENV{TRAVIS_BUILD_NUMBER})
+project(bulk VERSION 0.0.$ENV{TRAVIS_BUILD_NUMBER})
 
 find_package(GTest REQUIRED)
 
-add_executable(matrix main.cpp)
+add_executable(bulk main.cpp)
 add_executable(test test.cpp)
 
-set_target_properties(matrix PROPERTIES
-    CXX_STANDARD 20
+set_target_properties(bulk PROPERTIES
+    CXX_STANDARD 17
     CXX_STANDARD_REQUIRED ON
 )
-target_include_directories(matrix
+target_include_directories(bulk
     PRIVATE "${CMAKE_BINARY_DIR}"
 )
 
 set_target_properties(test PROPERTIES
-    CXX_STANDARD 20
+    CXX_STANDARD 17
     CXX_STANDARD_REQUIRED ON
 )
 target_link_libraries(test GTest::GTest GTest::Main)
 
 if (MSVC)
-    target_compile_options(matrix PRIVATE
+    target_compile_options(bulk PRIVATE
         /W4
     )
     target_compile_options(test PRIVATE
         /W4
     )
 else ()
-    target_compile_options(matrix PRIVATE
+    target_compile_options(bulk PRIVATE
+        -Wall -Wextra -pedantic 
     )
     target_compile_options(test PRIVATE
+        -Wall -Wextra -pedantic 
     )
 endif()
 
-install(TARGETS matrix RUNTIME DESTINATION bin)
+install(TARGETS bulk RUNTIME DESTINATION bin)
 
 set(CPACK_GENERATOR DEB)
 
