--- a/server/CMakeLists.txt
+++ b/server/CMakeLists.txt
@@ -1,19 +1,20 @@
 cmake_minimum_required(VERSION 3.9)
 
-project(async VERSION 0.0.$ENV{TRAVIS_BUILD_NUMBER})
+project(server VERSION 0.0.$ENV{TRAVIS_BUILD_NUMBER})
 
 find_package(Threads REQUIRED)
 find_package(Boost 1.54.0 REQUIRED system)
 
-add_library(async SHARED
+add_library(server SHARED
   async.hpp
   handler.cpp
   handler.hpp
+  server.hpp
 )
 
 add_executable(main main.cpp)
 
-set_target_properties(async PROPERTIES
+set_target_properties(server PROPERTIES
   CXX_STANDARD 20
   CXX_STANDARD_REQUIRED ON
   PUBLIC_HEADER async.hpp
@@ -24,7 +25,7 @@ set_target_properties(main PROPERTIES
   CXX_STANDARD_REQUIRED ON
 )
 
-target_include_directories(async
+target_include_directories(server
   PRIVATE "${CMAKE_BINARY_DIR}"
 )
 
@@ -37,20 +38,20 @@ target_include_directories(main
 )
 
 target_link_libraries(main PRIVATE
-  async
+  server
 )
 
 set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++2a")
 
 if (MSVC)
-  target_compile_options(async PRIVATE
+  target_compile_options(server PRIVATE
     /W4
   )
   target_compile_options(main PRIVATE
     /W4
   )
 else ()
-  target_compile_options(async PRIVATE
+  target_compile_options(server PRIVATE
     -Wall -Wextra -pedantic -Wl,--no-as-needed -lpthread
   )
   target_compile_options(main PRIVATE
@@ -60,7 +61,7 @@ endif()
 
 include(GNUInstallDirs)
 install(
-  TARGETS async
+  TARGETS server
   LIBRARY DESTINATION ${CMAKE_INSTALL_LIBDIR}
   PUBLIC_HEADER DESTINATION ${CMAKE_INSTALL_INCLUDEDIR}
 )
