--- a/server/CMakeLists.txt
+++ b/server/CMakeLists.txt
@@ -5,40 +5,40 @@ project(server VERSION 0.0.$ENV{TRAVIS_BUILD_NUMBER})
 find_package(Threads REQUIRED)
 find_package(Boost 1.54.0 REQUIRED system)
 
-add_library(server SHARED
+add_library(async SHARED
   async.hpp
   handler.cpp
   handler.hpp
   server.hpp
 )
 
-add_executable(main main.cpp)
+add_executable(server main.cpp)
 
-set_target_properties(server PROPERTIES
+set_target_properties(async PROPERTIES
   CXX_STANDARD 20
   CXX_STANDARD_REQUIRED ON
   PUBLIC_HEADER async.hpp
 )
 
-set_target_properties(main PROPERTIES
+set_target_properties(server PROPERTIES
   CXX_STANDARD 20
   CXX_STANDARD_REQUIRED ON
+)
+
+target_include_directories(async
+  PRIVATE "${CMAKE_BINARY_DIR}"
+)
+
+target_link_libraries(async
+	${CMAKE_THREAD_LIBS_INIT} boost_system pthread
 )
 
 target_include_directories(server
   PRIVATE "${CMAKE_BINARY_DIR}"
 )
 
-target_link_libraries(server
-	${CMAKE_THREAD_LIBS_INIT} boost_system pthread
-)
-
-target_include_directories(main
-  PRIVATE "${CMAKE_BINARY_DIR}"
-)
-
-target_link_libraries(main PRIVATE
-  server
+target_link_libraries(server PRIVATE
+  async
 )
 
 set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++2a")
@@ -47,26 +47,26 @@ if (MSVC)
   target_compile_options(server PRIVATE
     /W4
   )
-  target_compile_options(main PRIVATE
+  target_compile_options(async PRIVATE
     /W4
   )
 else ()
   target_compile_options(server PRIVATE
     -Wall -Wextra -pedantic -Wl,--no-as-needed -lpthread
   )
-  target_compile_options(main PRIVATE
+  target_compile_options(asyncPRIVATE
     -Wall -Wextra -pedantic -Wl,--no-as-needed -lpthread
   )
 endif()
 
 include(GNUInstallDirs)
 install(
-  TARGETS server
+  TARGETS async
   LIBRARY DESTINATION ${CMAKE_INSTALL_LIBDIR}
   PUBLIC_HEADER DESTINATION ${CMAKE_INSTALL_INCLUDEDIR}
 )
 
-install(TARGETS main RUNTIME DESTINATION bin)
+install(TARGETS server RUNTIME DESTINATION bin)
 
 set(CPACK_GENERATOR DEB)
 
